--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html lang="en">
     <head>
 
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <title>Babylon Template</title>
 
         <style>
@@ -20,13 +21,12 @@
             }
         </style>
 
-        <script src="https://cdn.babylonjs.com/babylon.js"></script>ud
-    </head>
+</head>
 
-   <body>
-
-	<canvas id="renderCanvas"></canvas>
-    <script src="script.js"></script>
+<body>
+    
+    <canvas id="renderCanvas"></canvas>
+    <script type="module" src="/src/script.ts"></script>
 
 
    </body>
