--- a/index.html
+++ b/index.html
@@ -1,34 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <title>Babylon Template</title>
-
-        <style>
-            html, body {
-                overflow: hidden;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-            #renderCanvas {
-                width: 100%;
-                height: 100%;
-                touch-action: none;
-            }
-        </style>
-
-</head>
-
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Babylon.js App</title>
+    <style>
+      body { margin: 0; }
+      canvas { display: block; width: 100%; height: 100%; }
+    </style>
+  </head>
+  <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="module" src="/src/script.ts"></script>
-
-
-   </body>
-
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
